# rust_oracle_react

./: .env.hmg  .gitignore  BACKEND.md  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.hmg.yml  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
migrations/: 20240320000000_create_nfe_identifications.sql
react-frontend/: package.json  vite.config.ts
react-frontend/src/: App.css  App.tsx  index.css  main.tsx
react-frontend/src/components/: ItemForm.tsx
react-frontend/src/pages/: IdePage.tsx  PlaceholderPage.tsx
react-frontend/src/types/: nfeTypes.ts
rust-backend/: Dockerfile  Dockerfile.dev
scripts/: healthcheck.sql  setup_db.sh  setup_oracle.sh  start.sh
src/: main.rs
src/errors/: mod.rs  repository_error.rs
src/handlers/: common.rs  mod.rs  nfe_identification_handler.rs
src/models/: mod.rs  nfe_identification.rs
src/repositories/: mod.rs  nfe_identification_repository.rs
src/services/: cache_service.rs
svelte-frontend/: .eslintrc.cjs  Dockerfile  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json
svelte-frontend/src/: App.svelte  app.css  main.ts
svelte-frontend/src/components/: ItemForm.svelte  MetricsPanel.svelte
svelte-frontend/src/pages/: HomePage.svelte  IdePage.svelte  MetricsPage.svelte  NfePage.svelte  PlaceholderPage.svelte
svelte-frontend/src/routes/: IdePage.svelte
svelte-frontend/src/services/: api.ts  metricsService.ts
svelte-frontend/src/styles/: theme.css
svelte-frontend/src/types/: metrics.ts  nfe.ts  nfeTypes.ts
