[package]
name = "rust_oracle_react"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oracle = "0.5"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] } 