[package]
name = "rust_oracle_react"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
oracle = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114" 